--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema de Registro de Juegos</title>
+    <title>Document</title>
 </head>
 <body>
-    <script src="app.js"></script>
+    <h1>Correo: Jesusv@gmail.com</h1>
+    <p>Instructora</p>
 </body>
 </html>
